[package]
name = "libacc"
authors = ["Amy Parker <amy@amyip.net>", "Kevin Liu <kevin.liu@csu.fullerton.edu>", "Owen de Vita <owend1117@gmail.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"
description = "Library for the ACC protocol"
repository = "https://github.com/amyipdev/libacc"
license = "GPL-2.0-or-later"

[dependencies]
aes-gcm-siv = "0.11.1"
rand = "0.8.5"
bson = "2.9.0"
serde = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
